// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleLibrary Not Read-only Renders in open state and loads modules 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleLibrary
    addModule={[Function]}
    api={
      Object {
        "getModules": [Function],
        "setWfLibraryCollapse": [Function],
      }
    }
    dropModule={[Function]}
    isReadOnly={false}
    libraryOpen={true}
    setLibraryOpen={[Function]}
    workflow={
      Object {
        "id": 15,
        "name": "What a workflow!",
      }
    }
  >
    <div>
      <ModuleLibraryOpen
        addModule={[Function]}
        api={
          Object {
            "getModules": [Function],
            "setWfLibraryCollapse": [Function],
          }
        }
        dropModule={[Function]}
        isReadOnly={false}
        items={Array []}
        libraryOpen={true}
        moduleAdded={[Function]}
        openCategory="Add data"
        setOpenCategory={[Function]}
        toggleLibrary={[Function]}
        workflow={
          Object {
            "id": 15,
            "name": "What a workflow!",
          }
        }
      >
        <div
          className="module-library-open"
        >
          <div
            className="library-nav-bar"
          >
            <div
              className="d-flex align-items-center flex-row mb-4"
            >
              <a
                className="logo"
                href="/workflows"
              >
                <img
                  src="/static/images/logo.png"
                  width="20"
                />
              </a>
              <a
                className="logo-2 ml-3 t-vl-gray "
                href="/workflows"
              >
                Workbench
              </a>
              <div
                className="close-open-toggle"
                onClick={[Function]}
              >
                <div
                  className="icon-sort-left-vl-gray ml-4 mt-1"
                />
              </div>
            </div>
            <ModuleSearch
              addModule={[Function]}
              dropModule={[Function]}
              items={Array []}
              workflow={
                Object {
                  "id": 15,
                  "name": "What a workflow!",
                }
              }
            >
              <div
                className="d-flex align-items-center search-bar"
              >
                <div
                  className="icon-search-white ml-icon-search ml-4"
                />
                <div
                  onBlur={[Function]}
                >
                  <Autosuggest
                    alwaysRenderSuggestions={false}
                    focusInputOnSuggestionClick={true}
                    getSectionSuggestions={[Function]}
                    getSuggestionValue={[Function]}
                    highlightFirstSuggestion={false}
                    id="1"
                    inputProps={
                      Object {
                        "autoFocus": true,
                        "onChange": [Function],
                        "placeholder": "Search modules",
                        "value": "",
                      }
                    }
                    multiSection={true}
                    onSuggestionSelected={[Function]}
                    onSuggestionsClearRequested={[Function]}
                    onSuggestionsFetchRequested={[Function]}
                    renderSectionTitle={[Function]}
                    renderSuggestion={[Function]}
                    renderSuggestionsContainer={[Function]}
                    shouldRenderSuggestions={[Function]}
                    suggestions={Array []}
                    theme={
                      Object {
                        "container": "react-autosuggest__container",
                        "containerOpen": "react-autosuggest__container--open",
                        "input": "react-autosuggest__input",
                        "inputFocused": "react-autosuggest__input--focused",
                        "inputOpen": "react-autosuggest__input--open",
                        "sectionContainer": "react-autosuggest__section-container",
                        "sectionContainerFirst": "react-autosuggest__section-container--first",
                        "sectionTitle": "react-autosuggest__section-title",
                        "suggestion": "react-autosuggest__suggestion",
                        "suggestionFirst": "react-autosuggest__suggestion--first",
                        "suggestionHighlighted": "react-autosuggest__suggestion--highlighted",
                        "suggestionsContainer": "react-autosuggest__suggestions-container",
                        "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open",
                        "suggestionsList": "react-autosuggest__suggestions-list",
                      }
                    }
                  >
                    <Autowhatever
                      getSectionItems={[Function]}
                      highlightedItemIndex={null}
                      highlightedSectionIndex={null}
                      id="1"
                      inputProps={
                        Object {
                          "autoFocus": true,
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "onKeyDown": [Function],
                          "placeholder": "Search modules",
                          "value": "",
                        }
                      }
                      itemProps={[Function]}
                      items={Array []}
                      multiSection={true}
                      renderInputComponent={[Function]}
                      renderItem={[Function]}
                      renderItemData={
                        Object {
                          "query": "",
                        }
                      }
                      renderItemsContainer={[Function]}
                      renderSectionTitle={[Function]}
                      theme={
                        Object {
                          "container": "react-autosuggest__container",
                          "containerOpen": "react-autosuggest__container--open",
                          "input": "react-autosuggest__input",
                          "inputFocused": "react-autosuggest__input--focused",
                          "inputOpen": "react-autosuggest__input--open",
                          "item": "react-autosuggest__suggestion",
                          "itemFirst": "react-autosuggest__suggestion--first",
                          "itemHighlighted": "react-autosuggest__suggestion--highlighted",
                          "itemsContainer": "react-autosuggest__suggestions-container",
                          "itemsContainerOpen": "react-autosuggest__suggestions-container--open",
                          "itemsList": "react-autosuggest__suggestions-list",
                          "sectionContainer": "react-autosuggest__section-container",
                          "sectionContainerFirst": "react-autosuggest__section-container--first",
                          "sectionTitle": "react-autosuggest__section-title",
                        }
                      }
                    >
                      <div
                        className="react-autosuggest__container"
                      >
                        <input
                          aria-activedescendant={null}
                          aria-autocomplete="list"
                          aria-expanded={false}
                          aria-haspopup={false}
                          aria-owns="react-autowhatever-1"
                          autoComplete="off"
                          autoFocus={true}
                          className="react-autosuggest__input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Search modules"
                          role="combobox"
                          type="text"
                          value=""
                        />
                        <div
                          className="react-autosuggest__suggestions-container"
                          id="react-autowhatever-1"
                        />
                      </div>
                    </Autowhatever>
                  </Autosuggest>
                </div>
                <div
                  className="search-close"
                />
              </div>
            </ModuleSearch>
          </div>
          <ModuleCategories
            addModule={[Function]}
            dropModule={[Function]}
            isReadOnly={false}
            items={Array []}
            libraryOpen={true}
            openCategory="Add data"
            setOpenCategory={[Function]}
          >
            <div
              className="list"
            />
          </ModuleCategories>
          ;
          <div
            className="ml-divider"
          />
          <DragSource(AddNotificationButtonOpen)>
            <AddNotificationButtonOpen
              connectDragSource={[Function]}
              isDragging={false}
            >
              <div
                className="card"
                onClick={[Function]}
              >
                <div
                  className="second-level t-vl-gray d-flex"
                >
                  <div
                    className="d-flex flex-row align-items-center"
                  >
                    <div
                      className="ml-icon-container"
                    >
                      <div
                        className="icon-notification ml-icon"
                      />
                    </div>
                    <div
                      className="content-5 ml-module-name"
                    >
                      Add data alert
                    </div>
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </AddNotificationButtonOpen>
          </DragSource(AddNotificationButtonOpen)>
          <div
            className="ml-divider"
          />
          <ImportModuleFromGitHub
            api={
              Object {
                "getModules": [Function],
                "setWfLibraryCollapse": [Function],
              }
            }
            libraryOpen={true}
            moduleAdded={[Function]}
          >
            <div
              className=""
            >
              <div
                className="import-module-button content-4 t-vl-gray"
                onClick={[Function]}
              >
                <span>
                  IMPORT CUSTOM MODULE
                </span>
              </div>
              <Modal
                autoFocus={true}
                backdrop={true}
                backdropTransitionTimeout={150}
                className="modal-dialog"
                fade={true}
                isOpen={false}
                keyboard={true}
                modalTransitionTimeout={300}
                toggle={[Function]}
                zIndex={1050}
              />
            </div>
          </ImportModuleFromGitHub>
        </div>
      </ModuleLibraryOpen>
    </div>
  </ModuleLibrary>
</DragDropContextProvider>
`;

exports[`ModuleLibrary Not Read-only Renders in open state and loads modules 2`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleLibrary
    addModule={[Function]}
    api={
      Object {
        "getModules": [Function],
        "setWfLibraryCollapse": [Function],
      }
    }
    dropModule={[Function]}
    isReadOnly={false}
    libraryOpen={true}
    setLibraryOpen={[Function]}
    workflow={
      Object {
        "id": 15,
        "name": "What a workflow!",
      }
    }
  >
    <div>
      <ModuleLibraryOpen
        addModule={[Function]}
        api={
          Object {
            "getModules": [Function],
            "setWfLibraryCollapse": [Function],
          }
        }
        dropModule={[Function]}
        isReadOnly={false}
        items={
          Array [
            Object {
              "category": "Add data",
              "description": "Connect a dataset from Enigma's collection via URL.",
              "icon": "url",
              "id": 4,
              "name": "Load from Enigma",
            },
            Object {
              "category": "Add data",
              "description": "Import from your favorite snowshall media",
              "icon": "url",
              "id": 2,
              "name": "Load from Facebork",
            },
            Object {
              "category": "Visualize",
              "description": "Create line, column and scatter plot charts.",
              "icon": "chart",
              "id": 1,
              "name": "Chartbuilder",
            },
          ]
        }
        libraryOpen={true}
        moduleAdded={[Function]}
        openCategory="Add data"
        setOpenCategory={[Function]}
        toggleLibrary={[Function]}
        workflow={
          Object {
            "id": 15,
            "name": "What a workflow!",
          }
        }
      >
        <div
          className="module-library-open"
        >
          <div
            className="library-nav-bar"
          >
            <div
              className="d-flex align-items-center flex-row mb-4"
            >
              <a
                className="logo"
                href="/workflows"
              >
                <img
                  src="/static/images/logo.png"
                  width="20"
                />
              </a>
              <a
                className="logo-2 ml-3 t-vl-gray "
                href="/workflows"
              >
                Workbench
              </a>
              <div
                className="close-open-toggle"
                onClick={[Function]}
              >
                <div
                  className="icon-sort-left-vl-gray ml-4 mt-1"
                />
              </div>
            </div>
            <ModuleSearch
              addModule={[Function]}
              dropModule={[Function]}
              items={
                Array [
                  Object {
                    "category": "Add data",
                    "description": "Connect a dataset from Enigma's collection via URL.",
                    "icon": "url",
                    "id": 4,
                    "name": "Load from Enigma",
                  },
                  Object {
                    "category": "Add data",
                    "description": "Import from your favorite snowshall media",
                    "icon": "url",
                    "id": 2,
                    "name": "Load from Facebork",
                  },
                  Object {
                    "category": "Visualize",
                    "description": "Create line, column and scatter plot charts.",
                    "icon": "chart",
                    "id": 1,
                    "name": "Chartbuilder",
                  },
                ]
              }
              workflow={
                Object {
                  "id": 15,
                  "name": "What a workflow!",
                }
              }
            >
              <div
                className="d-flex align-items-center search-bar"
              >
                <div
                  className="icon-search-white ml-icon-search ml-4"
                />
                <div
                  onBlur={[Function]}
                >
                  <Autosuggest
                    alwaysRenderSuggestions={false}
                    focusInputOnSuggestionClick={true}
                    getSectionSuggestions={[Function]}
                    getSuggestionValue={[Function]}
                    highlightFirstSuggestion={false}
                    id="1"
                    inputProps={
                      Object {
                        "autoFocus": true,
                        "onChange": [Function],
                        "placeholder": "Search modules",
                        "value": "",
                      }
                    }
                    multiSection={true}
                    onSuggestionSelected={[Function]}
                    onSuggestionsClearRequested={[Function]}
                    onSuggestionsFetchRequested={[Function]}
                    renderSectionTitle={[Function]}
                    renderSuggestion={[Function]}
                    renderSuggestionsContainer={[Function]}
                    shouldRenderSuggestions={[Function]}
                    suggestions={Array []}
                    theme={
                      Object {
                        "container": "react-autosuggest__container",
                        "containerOpen": "react-autosuggest__container--open",
                        "input": "react-autosuggest__input",
                        "inputFocused": "react-autosuggest__input--focused",
                        "inputOpen": "react-autosuggest__input--open",
                        "sectionContainer": "react-autosuggest__section-container",
                        "sectionContainerFirst": "react-autosuggest__section-container--first",
                        "sectionTitle": "react-autosuggest__section-title",
                        "suggestion": "react-autosuggest__suggestion",
                        "suggestionFirst": "react-autosuggest__suggestion--first",
                        "suggestionHighlighted": "react-autosuggest__suggestion--highlighted",
                        "suggestionsContainer": "react-autosuggest__suggestions-container",
                        "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open",
                        "suggestionsList": "react-autosuggest__suggestions-list",
                      }
                    }
                  >
                    <Autowhatever
                      getSectionItems={[Function]}
                      highlightedItemIndex={null}
                      highlightedSectionIndex={null}
                      id="1"
                      inputProps={
                        Object {
                          "autoFocus": true,
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "onKeyDown": [Function],
                          "placeholder": "Search modules",
                          "value": "",
                        }
                      }
                      itemProps={[Function]}
                      items={Array []}
                      multiSection={true}
                      renderInputComponent={[Function]}
                      renderItem={[Function]}
                      renderItemData={
                        Object {
                          "query": "",
                        }
                      }
                      renderItemsContainer={[Function]}
                      renderSectionTitle={[Function]}
                      theme={
                        Object {
                          "container": "react-autosuggest__container",
                          "containerOpen": "react-autosuggest__container--open",
                          "input": "react-autosuggest__input",
                          "inputFocused": "react-autosuggest__input--focused",
                          "inputOpen": "react-autosuggest__input--open",
                          "item": "react-autosuggest__suggestion",
                          "itemFirst": "react-autosuggest__suggestion--first",
                          "itemHighlighted": "react-autosuggest__suggestion--highlighted",
                          "itemsContainer": "react-autosuggest__suggestions-container",
                          "itemsContainerOpen": "react-autosuggest__suggestions-container--open",
                          "itemsList": "react-autosuggest__suggestions-list",
                          "sectionContainer": "react-autosuggest__section-container",
                          "sectionContainerFirst": "react-autosuggest__section-container--first",
                          "sectionTitle": "react-autosuggest__section-title",
                        }
                      }
                    >
                      <div
                        className="react-autosuggest__container"
                      >
                        <input
                          aria-activedescendant={null}
                          aria-autocomplete="list"
                          aria-expanded={false}
                          aria-haspopup={false}
                          aria-owns="react-autowhatever-1"
                          autoComplete="off"
                          autoFocus={true}
                          className="react-autosuggest__input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Search modules"
                          role="combobox"
                          type="text"
                          value=""
                        />
                        <div
                          className="react-autosuggest__suggestions-container"
                          id="react-autowhatever-1"
                        />
                      </div>
                    </Autowhatever>
                  </Autosuggest>
                </div>
                <div
                  className="search-close"
                />
              </div>
            </ModuleSearch>
          </div>
          <ModuleCategories
            addModule={[Function]}
            dropModule={[Function]}
            isReadOnly={false}
            items={
              Array [
                Object {
                  "category": "Add data",
                  "description": "Connect a dataset from Enigma's collection via URL.",
                  "icon": "url",
                  "id": 4,
                  "name": "Load from Enigma",
                },
                Object {
                  "category": "Add data",
                  "description": "Import from your favorite snowshall media",
                  "icon": "url",
                  "id": 2,
                  "name": "Load from Facebork",
                },
                Object {
                  "category": "Visualize",
                  "description": "Create line, column and scatter plot charts.",
                  "icon": "chart",
                  "id": 1,
                  "name": "Chartbuilder",
                },
              ]
            }
            libraryOpen={true}
            openCategory="Add data"
            setOpenCategory={[Function]}
          >
            <div
              className="list"
            >
              <ModuleCategory
                collapsed={false}
                isReadOnly={false}
                libraryOpen={true}
                modules={
                  Array [
                    <DragSource(Module)
                      addModule={[Function]}
                      dropModule={[Function]}
                      icon="url"
                      id={4}
                      name="Load from Enigma"
                  />,
                    <DragSource(Module)
                      addModule={[Function]}
                      dropModule={[Function]}
                      icon="url"
                      id={2}
                      name="Load from Facebork"
                  />,
                  ]
                }
                name="Add data"
                setOpenCategory={[Function]}
              >
                <div
                  className="card b-l-gray library-card-category-open"
                >
                  <div
                    className="ml-cat"
                  >
                    <div
                      className="first-level"
                      onClick={[Function]}
                    >
                      <div
                        className="cat-container"
                      >
                        <span
                          className="open-ML-cat"
                        >
                          Add data
                        </span>
                        <div
                          className="ml-sort icon-sort-up-vl-gray"
                        />
                      </div>
                    </div>
                    <Collapse
                      delay={
                        Object {
                          "hide": 350,
                          "show": 350,
                        }
                      }
                      isOpen={true}
                      onClosed={[Function]}
                      onOpened={[Function]}
                      tag="div"
                    >
                      <div
                        className="collapse show"
                        style={Object {}}
                      >
                        <div
                          className="ml-list"
                        >
                          <DragSource(Module)
                            addModule={[Function]}
                            dropModule={[Function]}
                            icon="url"
                            id={4}
                            name="Load from Enigma"
                          >
                            <Module
                              addModule={[Function]}
                              connectDragSource={[Function]}
                              dropModule={[Function]}
                              icon="url"
                              id={4}
                              isDragging={false}
                              name="Load from Enigma"
                            >
                              <div
                                className="card ml-module-card"
                              >
                                <div
                                  className=""
                                  onClick={[Function]}
                                >
                                  <div
                                    className="second-level d-flex"
                                  >
                                    <div
                                      className="d-flex flex-row align-items-center"
                                    >
                                      <div
                                        className="ml-icon-container"
                                      >
                                        <div
                                          className="icon-url ml-icon"
                                        />
                                      </div>
                                      <div>
                                        <div
                                          className="content-5 ml-module-name"
                                        >
                                          Load from Enigma
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      className="ml-handle"
                                    >
                                      <div
                                        className="icon-grip"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </Module>
                          </DragSource(Module)>
                          <DragSource(Module)
                            addModule={[Function]}
                            dropModule={[Function]}
                            icon="url"
                            id={2}
                            name="Load from Facebork"
                          >
                            <Module
                              addModule={[Function]}
                              connectDragSource={[Function]}
                              dropModule={[Function]}
                              icon="url"
                              id={2}
                              isDragging={false}
                              name="Load from Facebork"
                            >
                              <div
                                className="card ml-module-card"
                              >
                                <div
                                  className=""
                                  onClick={[Function]}
                                >
                                  <div
                                    className="second-level d-flex"
                                  >
                                    <div
                                      className="d-flex flex-row align-items-center"
                                    >
                                      <div
                                        className="ml-icon-container"
                                      >
                                        <div
                                          className="icon-url ml-icon"
                                        />
                                      </div>
                                      <div>
                                        <div
                                          className="content-5 ml-module-name"
                                        >
                                          Load from Facebork
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      className="ml-handle"
                                    >
                                      <div
                                        className="icon-grip"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </Module>
                          </DragSource(Module)>
                        </div>
                      </div>
                    </Collapse>
                  </div>
                </div>
              </ModuleCategory>
              <ModuleCategory
                collapsed={true}
                isReadOnly={false}
                libraryOpen={true}
                modules={
                  Array [
                    <DragSource(Module)
                      addModule={[Function]}
                      dropModule={[Function]}
                      icon="chart"
                      id={1}
                      name="Chartbuilder"
                  />,
                  ]
                }
                name="Visualize"
                setOpenCategory={[Function]}
              >
                <div
                  className="card b-l-gray library-card-category-closed"
                >
                  <div
                    className="ml-cat"
                  >
                    <div
                      className="first-level"
                      onClick={[Function]}
                    >
                      <div
                        className="cat-container"
                      >
                        <span
                          className="open-ML-cat"
                        >
                          Visualize
                        </span>
                        <div
                          className="ml-sort icon-sort-down-vl-gray"
                        />
                      </div>
                    </div>
                    <Collapse
                      delay={
                        Object {
                          "hide": 350,
                          "show": 350,
                        }
                      }
                      isOpen={false}
                      onClosed={[Function]}
                      onOpened={[Function]}
                      tag="div"
                    >
                      <div
                        className="collapse"
                        style={Object {}}
                      >
                        <div
                          className="ml-list"
                        >
                          <DragSource(Module)
                            addModule={[Function]}
                            dropModule={[Function]}
                            icon="chart"
                            id={1}
                            name="Chartbuilder"
                          >
                            <Module
                              addModule={[Function]}
                              connectDragSource={[Function]}
                              dropModule={[Function]}
                              icon="chart"
                              id={1}
                              isDragging={false}
                              name="Chartbuilder"
                            >
                              <div
                                className="card ml-module-card"
                              >
                                <div
                                  className=""
                                  onClick={[Function]}
                                >
                                  <div
                                    className="second-level d-flex"
                                  >
                                    <div
                                      className="d-flex flex-row align-items-center"
                                    >
                                      <div
                                        className="ml-icon-container"
                                      >
                                        <div
                                          className="icon-chart ml-icon"
                                        />
                                      </div>
                                      <div>
                                        <div
                                          className="content-5 ml-module-name"
                                        >
                                          Chartbuilder
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      className="ml-handle"
                                    >
                                      <div
                                        className="icon-grip"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </Module>
                          </DragSource(Module)>
                        </div>
                      </div>
                    </Collapse>
                  </div>
                </div>
              </ModuleCategory>
            </div>
          </ModuleCategories>
          ;
          <div
            className="ml-divider"
          />
          <DragSource(AddNotificationButtonOpen)>
            <AddNotificationButtonOpen
              connectDragSource={[Function]}
              isDragging={false}
            >
              <div
                className="card"
                onClick={[Function]}
              >
                <div
                  className="second-level t-vl-gray d-flex"
                >
                  <div
                    className="d-flex flex-row align-items-center"
                  >
                    <div
                      className="ml-icon-container"
                    >
                      <div
                        className="icon-notification ml-icon"
                      />
                    </div>
                    <div
                      className="content-5 ml-module-name"
                    >
                      Add data alert
                    </div>
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </AddNotificationButtonOpen>
          </DragSource(AddNotificationButtonOpen)>
          <div
            className="ml-divider"
          />
          <ImportModuleFromGitHub
            api={
              Object {
                "getModules": [Function],
                "setWfLibraryCollapse": [Function],
              }
            }
            libraryOpen={true}
            moduleAdded={[Function]}
          >
            <div
              className=""
            >
              <div
                className="import-module-button content-4 t-vl-gray"
                onClick={[Function]}
              >
                <span>
                  IMPORT CUSTOM MODULE
                </span>
              </div>
              <Modal
                autoFocus={true}
                backdrop={true}
                backdropTransitionTimeout={150}
                className="modal-dialog"
                fade={true}
                isOpen={false}
                keyboard={true}
                modalTransitionTimeout={300}
                toggle={[Function]}
                zIndex={1050}
              />
            </div>
          </ImportModuleFromGitHub>
        </div>
      </ModuleLibraryOpen>
    </div>
  </ModuleLibrary>
</DragDropContextProvider>
`;

exports[`ModuleLibrary Read-only Renders in closed state, without modules 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleLibrary
    addModule={[Function]}
    api={
      Object {
        "getModules": [Function],
        "setWfLibraryCollapse": [Function],
      }
    }
    dropModule={[Function]}
    isReadOnly={true}
    libraryOpen={false}
    setLibraryOpen={[Function]}
    workflow={
      Object {
        "id": 15,
        "name": "What a workflow!",
      }
    }
  >
    <ModuleLibraryClosed
      addModule={[Function]}
      api={
        Object {
          "getModules": [Function],
          "setWfLibraryCollapse": [Function],
        }
      }
      dropModule={[Function]}
      isReadOnly={true}
      items={Array []}
      libraryOpen={false}
      moduleAdded={[Function]}
      openCategory="Add data"
      openLibrary={[Function]}
      setOpenCategory={[Function]}
    >
      <div
        className="module-library-closed"
      >
        <div
          className="expand-lib"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="logo"
          >
            <img
              src="/static/images/logo.png"
              width="20"
            />
          </div>
        </div>
        <div
          className="card"
          onClick={[Function]}
        >
          <div
            className="closed-ML-cat"
          >
            <div
              className="icon-search-white ml-icon-search"
            />
          </div>
        </div>
        <ModuleCategories
          addModule={[Function]}
          dropModule={[Function]}
          isReadOnly={true}
          items={Array []}
          libraryOpen={false}
          openCategory="Add data"
          setOpenCategory={[Function]}
        >
          <div
            className="list"
          />
        </ModuleCategories>
        ;
        <DragSource(AddNotificationButtonClosed)
          setOpenCategory={[Function]}
        >
          <AddNotificationButtonClosed
            connectDragSource={[Function]}
            isDragging={false}
            setOpenCategory={[Function]}
          >
            <div
              className="notification-button-closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="card"
              >
                <div
                  className="closed-ML-cat t-vl-gray"
                >
                  <div
                    className="ml-icon-container"
                  >
                    <div
                      className="icon-notification ml-icon"
                      title="Add Notification"
                    />
                  </div>
                </div>
              </div>
              <div
                className="card alert-closed-ML"
                style={
                  Object {
                    "display": "none",
                  }
                }
              >
                <div
                  className="second-level d-flex "
                >
                  <div
                    className="content-5  my-auto mr-5"
                  >
                    Add data alert
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </div>
          </AddNotificationButtonClosed>
        </DragSource(AddNotificationButtonClosed)>
        <ImportModuleFromGitHub
          api={
            Object {
              "getModules": [Function],
              "setWfLibraryCollapse": [Function],
            }
          }
          libraryOpen={false}
          moduleAdded={[Function]}
        >
          <div
            className=""
          >
            <div
              className="closed-ML-cat"
              onClick={[Function]}
            >
              <div
                className="icon-add"
                title="Import From Github"
              />
            </div>
            <Modal
              autoFocus={true}
              backdrop={true}
              backdropTransitionTimeout={150}
              className="modal-dialog"
              fade={true}
              isOpen={false}
              keyboard={true}
              modalTransitionTimeout={300}
              toggle={[Function]}
              zIndex={1050}
            />
          </div>
        </ImportModuleFromGitHub>
      </div>
    </ModuleLibraryClosed>
  </ModuleLibrary>
</DragDropContextProvider>
`;
